Fix Chrome inline radio text wrapping bug. Created a new css class to force no text wrapping.

--- a/static/css/techresidents.css
+++ b/static/css/techresidents.css
@@ -106,6 +106,10 @@
     padding-top: 45px;
 }
 
+.nowrap {
+    white-space: nowrap;
+}
+
 [class^="tr-icon-"] {
     display: inline-block;
     width: 14px;
